--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=1060px">
 	<meta name="format-detection" content="telephone=no">
 	<meta name="theme-color" content="#fff">
+	<link rel="stylesheet" media="all" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" media="all" href="css/video-js.css" >
 	<link rel="stylesheet" media="all" href="css/style.css" >
 	<script src="js/app.js"></script>
@@ -13,15 +14,15 @@
 <body>
 <!-- BEGIN  out-->
 <div class="out">
-	
-	//=include partials/screen1.html   
-	//=include partials/screen2.html   
-	//=include partials/screen3.html   
-	//=include partials/screen4.html   
-	//=include partials/screen5.html   
-	//=include partials/screen6.html   
-	//=include partials/screen7.html   
-	//=include partials/screen8.html   
+
+	//=include partials/screen1.html
+	//=include partials/screen2.html
+	//=include partials/screen3.html
+	//=include partials/screen4.html
+	//=include partials/screen5.html
+	//=include partials/screen6.html
+	//=include partials/screen7.html
+	//=include partials/screen8.html
 
 	<!-- BEGIN popup -->
 	<div class="popup">
@@ -31,13 +32,13 @@
 				<form action="">
 					<div class="field js-field">
 						<input type="text" class="input js-input"  placeholder="Имя ">
-					</div>							
+					</div>
 					<div class="field js-field">
 						<input type="text" class="input js-input"  placeholder="E-mail ">
-					</div>							
+					</div>
 					<div class="field js-field">
 						<input type="text" class="input js-input"  placeholder="Телефон ">
-					</div>							
+					</div>
 
 					<button class=""><span>Отправить!</span></button>
 				</form>
